# numathap

./: .clang-format  .gitignore  Architecture.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Architecture.md  Architecture2.md  Functions.md
include/numathap/: Context.hpp  Session.hpp  numathap.hpp
include/numathap/ast/: AstPrinter.hpp  Node.hpp  NodeDispatcher.hpp
include/numathap/backend/: Evaluator.hpp  evaluate.hpp
include/numathap/config/: CMathAdapter.hpp  CMathDoubleAdapter.hpp  Capability.hpp  ConfigModule.dox  Configurator.hpp  MathAdapter.hpp  MathEnvironment.hpp  MathLibrary.hpp  NumericType.hpp  configure.hpp  configure.tpp
include/numathap/core/: Context.hpp  DispatchEvaluator.hpp  Evaluator.hpp  Value.hpp
include/numathap/dispatch/: Dispatcher.hpp  Dispatcher.tpp
include/numathap/improved/: PrepareOptions.hpp  PreparedExpression.hpp  Session.hpp
include/numathap/math/: MathAst.hpp  MathAstBuilder.hpp  MathAstPrinter.hpp  MathModule.dox  MathNode.hpp  PreparedAst.hpp  prepare.hpp
include/numathap/numeric/: Real.hpp
include/numathap/orchestration/: Orchestrator.hpp
include/numathap/parser/: AstPrinter.hpp  Lexer.cpp  Lexer.hpp  Parser.hpp  ParserAst.hpp  ParserAstPrinter.hpp  ParserModule.dox  ParserNode.hpp  Token.hpp
include/numathap/parser/ast/: Node.hpp
include/numathap/symbolic/: Simplifier.hpp
python/: CMakeLists.txt
python/bindings/: Capability.cpp  Context.cpp  MathEnvironment.cpp  Value.cpp  configure.cpp  evaluate.cpp  module.cpp  prepare.cpp
python/numathap/: __init__.py
src/: Context.cpp  Session.cpp
src/ast/: AstPrinter.cpp
src/backend/: Evaluator.cpp  evaluate.cpp
src/config/: CMathAdapter.cpp  CMathDoubleAdapter.cpp  Configurator.cpp  MathAdapter.cpp  MathEnvironment.cpp
src/core/: Context.cpp  DispatchEvaluator.cpp  Evaluator.cpp  Value.cpp
src/dispatch/: Dispatcher.cpp
src/math/: MathAst.cpp  MathAstBuilder.cpp  MathAstPrinter.cpp  PreparedAst.cpp  prepare.cpp
src/numeric/: Real.cpp
src/orchestration/: Orchestrator.cpp
src/parser/: AstPrinter.cpp  Lexer.cpp  Parser.cpp  ParserAst.cpp  ParserAstPrinter.cpp
src/symbolic/: Simplifier.cpp
tests/backend/: eval2_test.cpp  evaluator_test.cpp
tests/core/: evaluator_test.cpp  value_test_1.cpp
tests/math/: PrepAst_print_test.cpp  evaluate_test.cpp
tests/orchestration/: configure_test.cpp  mathenvironment_test.cpp  simplifier_test.cpp
tests/parser/: ParserAst_test.cpp  frontend2_test.cpp  frontend_test.cpp  lexer_test.cpp  parser_ast.txt  parser_ast_test.cpp  parser_cases.txt  pipeline_test.cpp
tests/utils/viewer/include/: AstViewerCore.hpp  PrinterTextParser.hpp  test_framework.hpp
tests/utils/viewer/src/: AstViewerCore.cpp  AstViewerCore_integration_test.cpp  PrinterTextParser.cpp  PrinterTextParser_integration_test.cpp  PrinterTextParser_test.cpp  ast_analyser.cpp
tools/ast_analyser/: ast_analyser.hpp
tools/ast_analyser/examples/: basic.yaml
